--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "server.ts",
   "license": "MIT",
   "dependencies": {
+    "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "sequelize": "^6.27.0",
+    "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.15",
+    "@types/sequelize": "^4.28.14",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
