--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "dev": "nodemon ./server.ts"
+    "dev": "nodemon ./server.ts",
+    "seed": "rm database.sqlite && touch database.sqlite && ts-node ./seed.ts"
   }
 }
