--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.ts",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -12,6 +13,7 @@
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.15",
     "@types/sequelize": "^4.28.14",
